manifests-successful/git-clone-operator-v1.1-alpha3.tgz-manifest.yaml
---
# Source: git-clone-operator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: my-release-git-clone-operator
    labels:
        helm.sh/chart: git-clone-operator-v1.1-alpha3
        app.kubernetes.io/name: git-clone-operator
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/version: "v1.1-alpha3"
        app.kubernetes.io/managed-by: Helm
spec:
    type: ClusterIP
    ports:
        - port: 8080
          targetPort: http
          protocol: TCP
          name: http

        - port: 4443
          targetPort: https
          protocol: TCP
          name: https
    selector:
        app.kubernetes.io/name: git-clone-operator
        app.kubernetes.io/instance: my-release
---
# Source: git-clone-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: my-release-git-clone-operator
    labels:
        helm.sh/chart: git-clone-operator-v1.1-alpha3
        app.kubernetes.io/name: git-clone-operator
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/version: "v1.1-alpha3"
        app.kubernetes.io/managed-by: Helm
spec:
    replicas: 1
    selector:
        matchLabels:
          app.kubernetes.io/name: git-clone-operator
          app.kubernetes.io/instance: my-release
    template:
        metadata:
            labels:
                app.kubernetes.io/name: git-clone-operator
                app.kubernetes.io/instance: my-release
        spec:
            terminationGracePeriodSeconds: 5
            serviceAccountName: git-clone-operator-sa
            securityContext:
              fsGroup: 65161
              runAsGroup: 65161
              runAsNonRoot: true
              runAsUser: 65161
            containers:
                - name: webhook-handler
                  image: ghcr.io/riotkit-org/git-clone-operator:v1.1-alpha3
                  imagePullPolicy: Always
                  args: ["serve", "--tls", "--default-image", "ghcr.io/riotkit-org/git-clone-operator:v1.1-alpha3"]
                  volumeMounts:
                      - name: tls
                        mountPath: "/etc/admission-webhook/tls"
                        readOnly: true
                  ports:
                      - name: http
                        containerPort: 8080
                        protocol: TCP
                      - name: https
                        containerPort: 4443
                        protocol: TCP
                  livenessProbe:
                      failureThreshold: 1
                      httpGet:
                          path: /health
                          scheme: HTTPS
                          port: https
                  readinessProbe:
                      httpGet:
                          path: /health
                          scheme: HTTPS
                          port: https
                  resources:
                    limits:
                      cpu: 1
                      memory: 128Mi
                    requests:
                      cpu: 0
                      memory: 16Mi
            volumes:
                - name: tls
                  secret:
                      secretName: my-release-git-clone-operator
---
# Source: git-clone-operator/templates/mutatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
    name: my-release-git-clone-operator
    namespace: git-clone-operator-v1.1-alpha3.tgz
    labels:
        helm.sh/chart: git-clone-operator-v1.1-alpha3
        app.kubernetes.io/name: git-clone-operator
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/version: "v1.1-alpha3"
        app.kubernetes.io/managed-by: Helm
webhooks:
    - name: my-release-git-clone-operator.git-clone-operator-v1.1-alpha3.tgz.svc.cluster.local
      failurePolicy: Fail
      objectSelector:
          matchLabels:
              riotkit.org/git-clone-operator: "true"
      rules:
          - apiGroups: [""]
            apiVersions: ["v1"]
            operations: ["CREATE"]
            resources: ["pods"]
            scope: "*"
      clientConfig:
          service:
              namespace: git-clone-operator-v1.1-alpha3.tgz
              name: my-release-git-clone-operator
              path: /mutate-pods
              port: 4443
          caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURQekNDQWllZ0F3SUJBZ0lRS0R2THE0Q3ZCd3VHUjgxdWhUNnJXakFOQmdrcWhraUc5dzBCQVFzRkFEQXEKTVNnd0pnWURWUVFERXg5bmFYUXRZMnh2Ym1VdGIzQmxjbUYwYjNJdFlXUnRhWE56YVc5dUxXTmhNQjRYRFRJMApNRFl5TURFME5UWTBNVm9YRFRNME1EWXhPREUwTlRZME1Wb3dLakVvTUNZR0ExVUVBeE1mWjJsMExXTnNiMjVsCkxXOXdaWEpoZEc5eUxXRmtiV2x6YzJsdmJpMWpZVENDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0MKQVFvQ2dnRUJBT2V1cWQ3V2Q5UFR5VXBhRHlkRzVpYm1QMjdBUUgvRHV0WE1RYjVKNlN2blFWejBlcFNsbVJiMQpkY2ZLNHBn [...]
      admissionReviewVersions: ["v1"]
      sideEffects: NoneOnDryRun
      timeoutSeconds: 2
